fixed horizontal overflow (.page-grid width was 100vw, removed that and its fine)

--- a/test/test.css
+++ b/test/test.css
@@ -9,12 +9,16 @@ body {
 	min-height: 100%;
 	background-color: black;
 }
-
 * {
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
 }
+
+/* TODO: Give desktop/tablet foot links padding
+instead of foot-flex-items having margins.
+remember to correct phone version. */ 
+
 
 /* Layout Classes */
 .page-grid {}
@@ -57,14 +61,13 @@ body {
 /* Desktop Layout */
 .page-grid {
 	/* fill the viewport with the page grid */
-	min-height: 100vh;
-	min-width: 100vw;
+	height: 100vh;
 	display: grid;
 	grid-template-columns: 210px 1fr;
-	grid-template-rows: 220px 1fr 40px;
+	grid-template-rows: 220px 1fr 42px;
 	grid-template-areas: "tnav cont"
 						 "snav cont"
-						 "foot foot";
+						 "foot foot";	
 }
 .page-grid-item.tnav {grid-area:  tnav;}
 .page-grid-item.snav {grid-area:  snav;}
@@ -76,10 +79,10 @@ body {
 	flex-flow: column nowrap;
 }
 .tnav-flex-item {
-	margin: 5px 0;
+	padding: 5px 0;
 }
 .snav-flex {
-	margin: 10px 5px 10px 0;
+	padding: 10px 5px 10px 0;
 	display: flex;
 	flex-flow: column nowrap;
 }
@@ -87,7 +90,6 @@ body {
 	margin: 5px 0;
 }
 .cont-grid {
-	width: 100%;
 	padding: 25px;
 }
 .foot-flex {
@@ -95,11 +97,15 @@ body {
 	flex-flow: row nowrap;
 	justify-content: center;
 }
+.foot-flex-item {
+	margin: 10px;
+}
 /* End of Layout CSS */
 
 /* Desktop Styling */
 /* Top Navigation Bar */
 .tnav {
+	position: relative;
 	background-color: transparent;
 }
 .tnav::before {
@@ -247,7 +253,7 @@ body {
 }
 /* Footer */
 .foot {
-	background: linear-gradient(0deg, #444, #666);
+	background: linear-gradient(0deg, #222, #444);
 }
 .foot > ul {
 	list-style-type: none;
@@ -258,17 +264,22 @@ body {
 .foot-link {
 	display: block;
 	text-decoration: none;
-	//color: hsl(45, 45%, 45%);
+}
+.foot-link:hover {
+	background: linear-gradient(0deg, #444, #666);
 }
 .foot-link-icon {
 	display: none;
 }
-#aboutLink .foot-link-icon {color: hsl(240, 100%, 45%);}
-#contactLink .foot-link-icon {color: hsl(45, 100%, 45%);}
-#githubLink .foot-link-icon {color: hsl(45, 75%, 10%);}
 .foot-link-text {
 	display: inline-block;
+	color: hsl(45, 100%, 45%);
+	font-family: Orbitron, Monospace;
 }
+#aboutLink   .foot-link-icon {color: hsl(240, 100%, 45%);}
+#contactLink .foot-link-icon {color: hsl(45,  100%, 45%);}
+#githubLink  .foot-link-icon {color: hsl(45,   75%, 10%);}
+
 
 @keyframes slidein {
 	from {width: 52px; opacity: 0.5}
@@ -276,7 +287,7 @@ body {
 }
 
 /* Tablet Layout & Styling */
-@media screen and (max-width: 760px) {
+@media screen and (max-width: 1080px) {
 	.page-grid {
 		display: grid;
 		grid-template-columns: 52px 1fr;
@@ -339,7 +350,7 @@ body {
 		justify-content: space-around;
 	}
 	.tnav-flex-item {
-		margin: 5px 0;
+		padding: 5px 0;
 	}
 	.tnav-flex-item:nth-child(1) {
 		display: none;
@@ -366,8 +377,20 @@ body {
 
 
 	.tnav {
-		position: static;
+		position: relative;
 		width: 1fr;
+		background-color: transparent;
+	}
+	.tnav::before {
+		content: "";
+		z-index: -1;
+		width: 100%;
+		height: 100%;
+		position: absolute;
+		top: 0;
+		left: 0;
+		background-image: var(--navBackgroundImg);
+		filter: blur(2px);
 	}
 	.tnav-head {
 		display: none;
